[gd_scene load_steps=4 format=3 uid="uid://c2yh2rdpp0snf"]

[ext_resource type="Script" uid="uid://s2vkqmdghun2" path="res://tests/goap/fixtures/multi_agent_scene.gd" id="1"]
[ext_resource type="Script" uid="uid://bmxh7xtyixtlo" path="res://systems/goap/core/goap_agent.gd" id="2"]
[ext_resource type="Script" uid="uid://c8eod31d3xd7s" path="res://systems/goap/core/goap_orchestrator.gd" id="3"]

[node name="MultiAgentScene" type="Node"]
script = ExtResource("1")

[node name="Orchestrator" type="Node" parent="."]
script = ExtResource("3")
think_budget_ms = 8.0
min_think_interval = 0.2

[node name="Agent1" type="Node" parent="."]
script = ExtResource("2")

[node name="Agent2" type="Node" parent="."]
script = ExtResource("2")

[node name="Agent3" type="Node" parent="."]
script = ExtResource("2")
